--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
+<head><link rel="stylesheet" href="portfolio.css" media="screen></head>
 <html>
-  <link href="portfolio.css">
+  
   <nav id="navbar" class="nav">
   <ul class="nav-list">
     <li>
