--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<head><link rel="stylesheet" href="portfolio.css" media="screen></head>
+<head><link rel="stylesheet" href="stylesheet.css" media="screen></head>
 <html>
   
   <nav id="navbar" class="nav">
