--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
-<head><link rel="stylesheet" href="stylesheet.css" media="screen></head>
+
 <html>
-  
+ <head>
+   <link rel="stylesheet" href="stylesheet.css" media="screen>
+   </head> 
   <nav id="navbar" class="nav">
   <ul class="nav-list">
     <li>
