--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
  <head>
-   <link rel="stylesheet" href="stylesheet.css" media="screen>
+   <link rel="stylesheet" href="/stylesheet.css">
    </head> 
   <nav id="navbar" class="nav">
   <ul class="nav-list">
