--- a/index.html
+++ b/index.html
@@ -2,8 +2,22 @@
 
 <html>
  <head>
-   <link rel="stylesheet" href="/stylesheet.css">
-   </head> 
+   <link rel="stylesheet" href="/stylesheet.css"/>
+   <link
+  rel="stylesheet"
+  href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+  integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+  crossorigin="anonymous"
+/>
+<link
+  href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap"
+  rel="stylesheet"
+/>
+<link
+  href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap"
+  rel="stylesheet"
+/>
+ 
   <nav id="navbar" class="nav">
   <ul class="nav-list">
     <li>
@@ -17,41 +31,48 @@
     </li>
   </ul>
 </nav>
-
+  
 <div id="page-wrapper">
-
+ 
   <section id="welcome-section" class="welcome-section">
     <h1>Hello, I'm Marc</h1>
-    <p>an aspiring software developer</p>
+    <p>aspiring software developer</p>
   </section>
-
-  <!-- END WELCOME SECTION -->
-
-<!-- START PROJECTS SECTION -->
-
+  
   <section id="projects" class="projects-section">
-    <h2 class="projects-section-header">These are some of my projects</h2>
-
+    <h2 class="projects-section-header">Projects</h2>
+    
     <div class="projects-grid">
       <a
       href="https://codepen.io/marcson909/full/GRgmLZz"
       target="_blank"
-      class="project project-tile"
-    >
-
-
-
+      class="project project-tile">
+        <img class="project-image" src="https://github.com/marcson909/FCCtributePage/blob/master/mattryan.jpg?raw=true" alt="tribute page image"><p class="project-title">Tribute Page</p>
+      </a>
     </div>
   </section>
 
+  
   <section id="contact" class="contact-section">
-    <h2 class="contact-section-header">Contact</h2>
-  </section>
-
-
-
-
-
-
+    <div class="contact-section-header">
+    <h2>Contact me</h2>
+    <p>Feel free to reach out through any link below</p>
+  </div>
+  <div class="contact-links">
+     <a
+      id="profile-link"
+      href="https://github.com/marcson909"
+      target="_blank"
+      class="btn contact-details"
+      ><i class="fab fa-github"></i> GitHub</a
+    >
+    <a href="mailto:marcstanleyswe@gmail.com" class="btn contact-details"
+      ><i class="fas fa-at"></i> Send a mail</a
+    >
+    <a href="tel:909-633-3228" class="btn contact-details"
+      ><i class="fas fa-mobile-alt"></i> Call me</a
+    >
+  </div>
+</section> 
 </div>
 </html>
